Colocando o diretório correto das imagens

--- a/Website/web1.html
+++ b/Website/web1.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8" />
     <title>Web 1.0</title>
 </head>
-<body bgcolor="#4BA4F2">
-    <h1>Web 1.0</h1>
-<hr size="2"><H2>WEB 1.0</H2>
-            <P align="justfy">
+<body style="background-color: #4BA4F2;">
+    <hr size="2"><h2>WEB 1.0</h2>
+            <p style="text-align: justify;">
                 A <i><b><a href="https://es.wikipedia.org/wiki/Web_1.0" target="_blank">Web 1.0</a></b></i> é a primeira fase da World Wide Web, ativa aproximadamente entre o início da década de 1990 e o começo dos anos 2000. Ela se caracterizava por páginas estáticas, nas quais os usuários apenas consumiam conteúdo sem qualquer tipo de interação. Era conhecida como uma web de “somente leitura”, em que os sites eram criados e mantidos por desenvolvedores ou empresas, e raramente atualizados. O conteúdo era fixo, e a navegação se limitava à leitura de textos e visualização de imagens simples. Tecnologias como HTML básico e hyperlinks predominavam. Não havia login, comentários nem personalização. Era uma internet de mão única, onde o usuário era apenas espectador.
                 <a href="https://chatgpt.com" target="_blank">imagem</a> <br>
-           <center><img src="IMAGEMWEB1.png" width="300" height="200"/></center>
-            
-        </P>
+           <img src="assets/IMAGEMWEB1.png" width="300" height="200" alt="Ilustração da Web 1.0" style="display: block; margin: auto;"/>
+        </p>
         <hr size="2">
         <a href="index.html">Ir para Página Inicial</a>
 </body>
