--- a/Website/web2.html
+++ b/Website/web2.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <title>Web 2.0</title>
 </head>
-<body bgcolor="#5C4BF2">
-    <hr size="2"><H2>WEB 2.0</H2>
-        <P align="justfy">
+<body style="background-color: #5C4BF2;">
+    <hr size="2"><h2>WEB 2.0</h2>
+        <p style="text-align: justify;">
             A <i><b><a href="https://pt.wikipedia.org/wiki/Web_2.0" target="_blank">Web 2.0</a></b></i> surgiu no início dos anos 2000 e marcou uma transformação na forma como os usuários se relacionavam com a internet. Nessa fase, os usuários passaram a ser também produtores de conteúdo. Redes sociais, blogs, fóruns, wikis e plataformas como o YouTube e o Facebook são produtos dessa nova web, mais interativa e colaborativa. O termo foi popularizado por <a href="https://pt.wikipedia.org/wiki/Tim_O%27Reilly" target="_blank">Tim O’Reilly</a> em 2004. Com o uso de tecnologias como AJAX, JavaScript e XML, as páginas passaram a ser dinâmicas, sem necessidade de recarregamento constante. A Web 2.0 é chamada de "web de leitura e escrita", pois permitiu o compartilhamento, comentários e edição de conteúdo em tempo real por qualquer pessoa conectada.
-            <center><img src="IMAGEMWEB2.png" width="300" height="200"/></center>
-        </P>
+            <img src="assets/IMAGEMWEB2.png" width="300" height="200" alt="Ilustração da Web 2.0" style="display: block; margin: auto;"/>
+        </p>
         <hr size="2">
         <a href="index.html">Ir para Página Inicial</a>
 </body>
