--- a/Website/web3.html
+++ b/Website/web3.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <title>Web 3.0</title>
 </head>
-<body bgcolor="#4B6FF2">
+<body style="background-color: #4B6FF2;">
     <hr size="2"><h2>WEB 3.0</h2>
-        <P align="justfy">
+        <p style="text-align: justify;">
             A <i><b><a href="https://pt.wikipedia.org/wiki/Web_3.0" target="_blank">Web 3.0</a></b></i> representa uma evolução rumo à inteligência das máquinas na internet. Também chamada de Web Semântica, essa fase busca tornar os dados compreensíveis por sistemas, permitindo que softwares “entendam” o conteúdo e ofereçam respostas mais adequadas. Utiliza tecnologias como <a href="https://pt.wikipedia.org/wiki/Intelig%C3%AAncia_artificial" target="_blank">inteligência artificial</a>, machine learning, dados estruturados, metadados e ontologias. Um dos principais objetivos da Web 3.0 é personalizar a experiência do usuário com base em suas preferências e comportamentos. A descentralização é outro pilar fundamental, sendo impulsionada pelo uso de <a href="https://pt.wikipedia.org/wiki/Blockchain" target="_blank">blockchain</a>, o que aumenta a segurança e o controle dos dados pelos próprios usuários.<br>
-            <center><img src="IMAGEMWEB3.png" width="300" height="200"/></center>
-        </P>
+            <img src="assets/IMAGEMWEB3.png" width="300" height="200" alt="Ilustração da Web 3.0" style="display: block; margin: auto;"/>
+        </p>
         <hr size="2">
         <a href="index.html">Ir para Página Inicial</a>
 </body>
